--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.datasource.url=jdbc:mysql://localhost:3306/informatorio?useSSL=false&serverTimezone=UTC&allowPublicKeyRetrival=true
+spring.datasource.url=jdbc:mysql://localhost:3306/informatorio_two?useSSL=false&serverTimezone=UTC&allowPublicKeyRetrival=true
 spring.datasource.username=root
 spring.datasource.password=bic123bic321
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
